--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - uses: jakejarvis/s3-sync-action@master
+    - uses: actions/checkout@main
+    - uses: jakejarvis/s3-sync-action@main
       with:
         args: --acl public-read --follow-symlinks --delete --exclude '.git*/*'
       env:
@@ -18,5 +18,4 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
      #   AWS_REGION: 'us-west-1'   # optional: defaults to us-east-1
-   #test
     #    SOURCE_DIR: 'public'      # optional: defaults to entire repository
