--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,7 @@ name: Upload Website
 on:
   push:
     branches:
-<<<<<<< HEAD
     - main
-=======
-    - master
->>>>>>> 8c73e2c (setting up github actions)
 
 jobs:
   deploy:
@@ -16,13 +12,10 @@ jobs:
     - uses: actions/checkout@master
     - uses: jakejarvis/s3-sync-action@master
       with:
-        args: --acl public-read --follow-symlinks --delete --exclude '.git*/*'
+        args: --acl public-read --follow-symlinks --delete
       env:
         AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-<<<<<<< HEAD
         AWS_REGION: 'ap-southeast-2'   # optional: defaults to us-east-1
-    #    SOURCE_DIR: 'public'      # optional: defaults to entire repository
-=======
->>>>>>> 8c73e2c (setting up github actions)
+       # SOURCE_DIR: 'public'      # optional: defaults to entire repository
