--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,4 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: 'ap-southeast-2'   # optional: defaults to us-east-1
        # SOURCE_DIR: 'public'      # optional: defaults to entire repository
-       
+       #it works!
